--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "@preact/preset-vite": "2.10.1",
         "@stylistic/eslint-plugin": "4.4.1",
         "eslint": "9.29.0",
+        "eslint-plugin-perfectionist": "^4.14.0",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
         "globals": "16.2.0",
         "typescript": "5.8.3",
         "typescript-eslint": "8.34.0",
