--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
         "preact": "10.26.9"
     },
     "devDependencies": {
-        "@eslint/js": "9.29.0",
-        "@html-eslint/eslint-plugin": "0.41.0",
-        "@preact/preset-vite": "2.10.1",
-        "@stylistic/eslint-plugin": "4.4.1",
-        "eslint": "9.29.0",
-        "eslint-plugin-perfectionist": "^4.14.0",
-        "eslint-plugin-simple-import-sort": "^12.1.1",
-        "globals": "16.2.0",
+        "@eslint/js": "9.30.1",
+        "@html-eslint/eslint-plugin": "0.42.0",
+        "@preact/preset-vite": "2.10.2",
+        "@stylistic/eslint-plugin": "5.1.0",
+        "eslint": "9.30.1",
+        "eslint-plugin-perfectionist": "4.15.0",
+        "eslint-plugin-simple-import-sort": "12.1.1",
+        "globals": "16.3.0",
         "typescript": "5.8.3",
-        "typescript-eslint": "8.34.0",
-        "vite": "6.3.5"
+        "typescript-eslint": "8.35.1",
+        "vite": "7.0.0"
     }
 }
